samples/_failures_safe/1761359947_74ea60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be7d40d7.c: In function ‘main’:
./samples/SAFE/__tmp_be7d40d7.c:161:9: error: expected expression at end of input
  161 |         operations[choice - 1](rows, cols,
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_be7d40d7.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be7d40d7.c:161:9: error: expected declaration or statement at end of input
